# kiwi-scp

./: .dockerignore  .drone.yml  .gitignore  Dockerfile  LICENSE  Makefile  README.md  base.conf  bump-version.sh  install.sh  kiwi  pyproject.toml  setup.py
data/etc/: command_help.txt
default.docker.down/: docker-compose.yml
example/: base.conf  kiwi  kiwi.yml
example/config/html/: index.html
example/hello-world.project/: docker-compose.yml
example/hello-world.project/web/: index.html
example/hello_world/: docker-compose.yml
kiwi_scp/: _constants.py  config.py  executable.py  instance.py  misc.py  project.py  projects.py  rootkit.py  service.py  services.py  subcommand.py  wstring.py  yaml.py
kiwi_scp/commands/: __init__.py  cli.py  cmd.py  cmd_build.py  cmd_cmd.py  cmd_disable.py  cmd_down.py  cmd_enable.py  cmd_init.py  cmd_list.py  cmd_logs.py  cmd_new.py  cmd_pull.py  cmd_push.py  cmd_restart.py  cmd_shell.py  cmd_show.py  cmd_up.py  cmd_update.py  decorators.py
kiwi_scp/data/etc/: docker-compose_default.yml  kiwi_default.yml  kiwi_header.yml
kiwi_scp/scripts/: kiwi.py  kiwi_next.py
kiwi_scp/subcommands/: __init__.py  _hidden.py  enable.py  init.py  push.py  restart.py  show.py  up.py  update.py
src/: default.kiwi.yml  kiwi-config.py  kiwi-scp.py  kiwi_default.yml
src/etc/: command_help.txt  default.kiwi.conf  default.kiwi.yml  docker-compose_default.yml  kiwi_default.yml  kiwi_header.yml  kiwi_help.txt  usage.txt
src/images/: rsync.Dockerfile
src/inc/: functions.sh
src/kiwi/: __init__.py  _constants.py  cmd_init.py  config.py  core.py  executable.py  misc.py  parser.py  project.py  projects.py  runner.py  subcommand.py
src/kiwi/subcommands/: __init__.py  _hidden.py  _subcommand.py  _utils.py  build.py  clean.py  cmd.py  conf.py  config.py  copy_conf.py  disable.py  down.py  enable.py  init.py  inspect.py  list.py  (+14 more)
tests/: test_config.py  test_instance.py  test_project.py  test_service.py  test_services.py
(+8 files in other folders)
